<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <Button
            app:cornerRadius="50dp"
            android:drawableLeft="@drawable/baseline_arrow_back_24"
            android:id="@+id/Back_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/backButton" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/Profile_Image"
            android:layout_width="170dp"
            android:layout_height="182dp"
            android:contentDescription="@string/contentDescription" />

        <EditText
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="textPersonName"
            android:text=""
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/Settings_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/settings"
                android:textSize="32sp"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/Ride_History_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/rideHistory"
                android:textSize="32sp"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/Payment_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/Payment"
                android:textSize="32sp"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/Logout_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/LogOut"
                android:textSize="32sp"
                app:cornerRadius="50dp" />

        </LinearLayout>
    </LinearLayout>
</layout>